# UAP

./: .pdm-python  README.md  pyproject.toml  requirements.txt
NOTEBOOK/: UJI 3 MODEL1.ipynb
src/: app.py  class_indices.json  cnn_non_pretrained.h5  cnn_non_pretrained_history.json  efficientnetb0.h5  efficientnetb0_finetuned.h5  efficientnetb0_finetuned_history.json  efficientnetb0_history.json  effnet_classification_report.csv  effnet_finetune_confusion_matrix.csv  resnet50_finetuned.h5  resnet50_finetuned_history.json  resnet50_head_history.json
