[project]
name = "UJI-UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Depi21", email = "devidianaprilia@webmail.umm.ac.id"},
]
dependencies = []
requires-python = ">=3.10"
package-mode = false
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.poetry]
name = "uap"
version = "0.1.0"
description = "Streamlit app"
package-mode = false
